--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="please_wait">Please wait</string>
     <string name="current_weather">Current weather</string>
     <string name="current_location">Current location</string>
+    <string name="temperature">%1$d%2$s</string>
+    <string name="feels_like">Feels like %1$d%2$s</string>
+    <string name="humidity">Humidity: %1$d%%</string>
+    <string name="pressure">Pressure: %1$d hPa</string>
+    <string name="wind">Wind: %1$.1f m/s</string>
+
 </resources>
