--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="feels_like">Feels like %1$d%2$s</string>
     <string name="percent_of">%1$d%%</string>
     <string name="pressure">%1$d hPa</string>
-    <string name="wind">%1$.1f m/s</string>
+    <string name="wind">%1$.1f %2$s</string>
 
     <string name="no_internet_connection">No internet connection</string>
     <string name="network_failure">Network Failure</string>
