--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="snow">Snow: %1$.1fmm</string>
     <string name="location_off_error">Please turn on your location service.</string>
     <string name="location_permission_error">Unable to update location without permission</string>
+    <string name="network_error">Network unavailable.</string>
+    <string name="refresh">Refresh</string>
 
 </resources>
