Added application icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Weather App</string>
+    <string name="app_name">Weather</string>
     <string name="please_wait">Please wait</string>
     <string name="current_weather">Current weather</string>
     <string name="current_location">Current location</string>
